crates/uitest/fixtures/ty_check/payable_on_unsupported_items.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/payable_on_unsupported_items.fe
---
error[12-0001]: unsupported `#[payable]` attribute on fn `foo`
  ┌─ payable_on_unsupported_items.fe:1:1
  │
1 │ #[payable]
  │ ^^^^^^^^^^ `#[payable]` is only supported on init blocks and recv arms

error[12-0001]: unsupported `#[payable]` attribute on struct `Bar`
  ┌─ payable_on_unsupported_items.fe:4:1
  │
4 │ #[payable]
  │ ^^^^^^^^^^ `#[payable]` is only supported on init blocks and recv arms

error[12-0001]: unsupported `#[payable]` attribute on enum `Baz`
  ┌─ payable_on_unsupported_items.fe:7:1
  │
7 │ #[payable]
  │ ^^^^^^^^^^ `#[payable]` is only supported on init blocks and recv arms

error[12-0001]: unsupported `#[payable]` attribute on const `X`
   ┌─ payable_on_unsupported_items.fe:10:1
   │
10 │ #[payable]
   │ ^^^^^^^^^^ `#[payable]` is only supported on init blocks and recv arms

error[12-0001]: unsupported `#[payable]` attribute on extern fn `ext`
   ┌─ payable_on_unsupported_items.fe:14:5
   │
14 │     #[payable]
   │     ^^^^^^^^^^ `#[payable]` is only supported on init blocks and recv arms
